removed more temp files

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ crashlytics-build.properties
 
 
 Flood/Library/
+Flood/Logs/shadercompiler-UnityShaderCompiler.exe6.log
+
+Flood/Logs/shadercompiler-UnityShaderCompiler.exe7.log
+
+Flood/Temp/
