--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+Flood/Library/PackageCache/com.unity.collab-proxy\@1.9.0/Lib/Editor/PlasticSCM/unityplastic.dll
